--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "mapbox-gl": "^2.15.0"
+    "three": "^0.181.2",
+    "vue": "^3.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^5.0.0",
-    "sass": "^1.72.0"
+    "sass": "^1.72.0",
+    "vite": "^5.0.0"
   }
 }
